[gd_scene load_steps=13 format=2]

[ext_resource path="res://art/enemySwimming_1.png" type="Texture" id=1]
[ext_resource path="res://art/enemyWalking_1.png" type="Texture" id=2]
[ext_resource path="res://art/enemyFlyingAlt_1.png" type="Texture" id=3]
[ext_resource path="res://art/enemyFlyingAlt_2.png" type="Texture" id=4]
[ext_resource path="res://art/enemySwimming_2.png" type="Texture" id=5]
[ext_resource path="res://art/enemyWalking_2.png" type="Texture" id=6]
[ext_resource path="res://src/Actors/Mob.gd" type="Script" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "fly",
"speed": 3.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ) ],
"loop": true,
"name": "swim",
"speed": 4.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 37.0
height = 24.0

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0.0198371, 0.600331 ), 0.0, 0.643493, 0, 0, Vector2( 0.314852, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.589522, 0.733001 ), -1.32452, -1.32452, 0, 0, Vector2( 1, 0.227197 ), -0.331444, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
initial_velocity_random = 0.57
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 10.0
tangential_accel_random = 1.0
angle = 180.0
angle_random = 1.0
scale = 20.0
scale_curve = SubResource( 3 )
color = Color( 0.462745, 0, 0, 1 )

[node name="Mob" type="RigidBody2D"]
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 1 )
animation = "walk"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="FreezeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DeathParticle" type="Particles2D" parent="."]
emitting = false
amount = 20
one_shot = true
explosiveness = 1.0
process_material = SubResource( 5 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="FreezeTimer" to="." method="_on_FreezeTimer_timeout"]
